hard-gists/2798682/run.log
=== Docker Run Log for 2798682 ===
Started at: Mi 29. Okt 13:15:21 CET 2025

[2025-10-29 13:15:21] START: Running container for 2798682
[2025-10-29 13:15:21] SUCCESS: Container 2b05591465cd744abb29f34c5a8c5e3de5444260aa11e2ee4f601788f8fe0429 started for 2798682
=== Container logs for 2798682 ===
  File "/snippet.py", line 25
    print 'Server started at port %s' % port
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2798682 ===
[2025-10-29 13:15:24] INFO: Container 2b05591465cd744abb29f34c5a8c5e3de5444260aa11e2ee4f601788f8fe0429 has stopped
